--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -88,33 +88,20 @@
                             </h:panelGroup>
 
                             <h:panelGroup
-                                rendered="#{SecurityAccessController.isAdminOrHasAnyAuthorityForAny('viewAllUsers, viewAllUserGroups, viewAllLdapGroups')}">
-                            <li class="nav-pic-text"><h:link value="#{msgs.user}" id="linkUsers" outcome="users"><i
-                                class="fa fa-user fa-lg"/></h:link></li>
+                                rendered="#{SecurityAccessController.isAdminOrHasAnyAuthorityForAny('viewAllUsers, viewAllUserGroups, viewAllClients, viewAllLdapGroups')}">
+                                <li class="nav-pic-text"><h:link value="#{msgs.user}" id="linkUsers" outcome="users"><i
+                                    class="fa fa-user fa-lg"/></h:link></li>
                             </h:panelGroup>
 
-                            <h:panelGroup rendered="true">
-                                <li class="nav-pic-text"><h:link value="#{msgs.modules}" id="linkModules"
-                                                                 outcome="modules"><i
-                                    class="fa fa-puzzle-piece fa-lg"/></h:link></li>
-                            </h:panelGroup>
-
-                            <h:panelGroup
-                                rendered="#{SecurityAccessController.isAdminOrHasAuthorityForAny('viewAllClients')}">
-                                <li class="nav-pic-text"><h:link value="#{msgs.clients}" id="linkClients"
-                                                                 outcome="clients"><i
-                                    class="fa fa-suitcase fa-lg"/></h:link></li>
+                            <h:panelGroup rendered="#{SecurityAccessController.isAdminOrHasAnyAuthorityGlobal('viewIndex, editIndex')}">
+                                <li class="nav-pic-text"><h:link value="#{msgs.system}" id="linkSystem"
+                                                                 outcome="system"><i
+                                    class="fa fa-wrench fa-lg"/></h:link></li>
                             </h:panelGroup>
 
                             <h:panelGroup rendered="true">
                                 <li class="nav-pic-text"><h:link value="#{msgs.help}" id="linkHelp" outcome="help"><i
                                     class="fa fa-life-ring fa-lg"/></h:link></li>
-                            </h:panelGroup>
-
-                            <h:panelGroup rendered="#{SecurityAccessController.isAdminOrHasAnyAuthorityGlobal('viewIndex, editIndex')}">
-                                <li class="nav-pic-text"><h:link value="#{msgs.indexing}" id="linkIndexing"
-                                                                 outcome="indexingPage"><i
-                                    class="fa fa-database fa-lg"/></h:link></li>
                             </h:panelGroup>
                         </ul>
                     </li>
