Adjust ids for selenium tests

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
@@ -31,7 +31,7 @@
 
         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
             <h:outputText>
-                <h:form>
+                <h:form id="templateActionForm">
                     <h:link id="editProcess" outcome="/pages/templateEdit"
                             title="#{msgs.editTemplate}">
                         <i class="fa fa-pencil-square-o fa-lg"/>
