--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/footer.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/footer.xhtml
@@ -14,6 +14,11 @@
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <div class="wrapper">
         <section id="footer-content">
+            <ul id="footer-meta-menu">
+                <li><a href="">#{msgs.imprint}</a></li>
+                <li><a href="">#{msgs.dataPrivacy}</a></li>
+                <li><a href="">#{msgs.termsOfUse}</a></li>
+            </ul>
             <p>KITODO.PRODUCTION <span>Version #{HelperForm.version}</span></p>
         </section>
     </div>
