Fix label for metadata language input field

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/userSettings.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/userSettings.xhtml
@@ -31,7 +31,7 @@
                 </div>
                 <div>
                     <!-- metadata language -->
-                    <h:outputLabel for="metadata-language" value="#{msgs.spracheFuerMetadaten}" />
+                    <h:outputLabel for="metadata-language" value="#{msgs.metadataLanguage}" />
                     <p:inputText id="metadata-language" value="#{LoginForm.myBenutzer.metadataLanguage}"
                                  class="input"/>
                 </div>
