--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/userSettings.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/userSettings.xhtml
@@ -17,7 +17,7 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:p="http://primefaces.org/ui">
 
-    <h:form id="userconfigform" onkeypress="ifEnterClick(event, 'userconfigform:absenden');">
+    <h:form id="userConfigForm" onkeypress="ifEnterClick(event, 'userConfigForm:absenden');">
         <p:panelGrid id="userConfigurationGrid" columns="2" layout="grid">
 
             <p:row>
