added sessionCleint indication to user menue

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -115,6 +115,11 @@
                                         <i>(Admin)</i>
                                     </h:outputText>
                                 </h3></li>
+                                <li>
+                                    <div>
+                                        #{msgs.client}: <b>#{BenutzerverwaltungForm.currentSessionClientName}</b>
+                                    </div>
+                                </li>
                                 <li><h:link value="#{msgs.userData}" outcome="userConfiguration"/></li>
                                 <li>
                                     <table>
