Move indexingRow template to standard template include directory

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/system/indexing.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/system/indexing.xhtml
@@ -85,7 +85,7 @@
                         <tbody>
 
                         <ui:repeat value="#{indexingForm.objectTypes}" var="objectType">
-                            <ui:include src="../../../../pages/inc_indexing/indexingRow.xhtml">
+                            <ui:include src="indexingRow.xhtml">
                                 <ui:param name="objectType" value="#{objectType}"/>
                             </ui:include>
                         </ui:repeat>
