Update Kitodo desktop/start page

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -19,10 +19,10 @@
     <div class="wrapper">
 
         <section id="portal-logo">
-            <h:outputLink value="start.jsf">
+            <h:outputLink value="desktop.jsf">
                 <h:graphicImage name="images/kitodo-logo.svg" alt="Kitodo.Production" width="160" id="kitodo-logo"/>
             </h:outputLink>
-            <h:outputLink value="start.jsf">
+            <h:outputLink value="desktop.jsf">
                 <h:graphicImage name="images/kitodo-icon.svg" alt="Kitodo.Production" width="40" id="kitodo-icon"/>
             </h:outputLink>
         </section>
