--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -447,6 +447,33 @@ section#content-section {
     height: 500px;
 }
 
+#desktopGrid, #desktopGrid_content {
+    background: none;
+}
+
+#desktopGrid_content > .ui-grid-row > .ui-panelgrid-cell {
+    background-color: white !important;
+    padding: 0;
+    margin: 8px;
+    border-radius: 3px;
+    -webkit-box-shadow: 0px 3px 0px 0px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px 3px 0px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 3px 0px 0px rgba(0,0,0,0.2);
+    max-height: 40% !important;
+}
+
+#desktopGrid_content > .ui-grid-row > .ui-panelgrid-cell .ui-widget-content {
+    padding: 0;
+}
+
+#desktopGrid_content .content-header {
+    height: unset !important;
+}
+
+#desktopGrid_content thead {
+    border-top: 3px solid #999;
+}
+
 #listWrapper, section#content-section {
     margin: auto 16px;
     border-radius: 3px;
