--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/breadcrumbs.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/breadcrumbs.xhtml
@@ -13,5 +13,5 @@
 
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <li><h:link value="#{msgs.startPage}" outcome="start"/></li>
+    <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
 </ui:composition>
