--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/processList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/processList.xhtml
@@ -62,7 +62,7 @@
                 <p:commandLink id="deleteProcess"
                                action="#{ProzessverwaltungForm.delete}"
                                title="#{msgs.delete}"
-                               update="processesTabView:processesForm:processesTable">
+                               update=":processesForm:processesTable">
                     <h:outputText><i class="fa fa-trash-o"/></h:outputText>
                     <f:setPropertyActionListener value="#{item.id}" target="#{ProzessverwaltungForm.processByID}"/>
                     <p:confirm header="#{msgs.confirmDelete}"
