--- a/Kitodo/src/main/webapp/WEB-INF/templates/baseEditView.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/baseEditView.xhtml
@@ -31,5 +31,6 @@
                 </ui:insert>
             </h:form>
         </p:panel>
+        <h:outputScript name="content.js" target="body" library="js"/>
     </ui:define>
 </ui:composition>
