--- a/Kitodo/src/main/webapp/WEB-INF/templates/baseListView.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/baseListView.xhtml
@@ -31,5 +31,6 @@
                 <p:tabView/>
             </ui:insert>
         </p:panel>
+        <h:outputScript name="content.js" target="body" library="js"/>
     </ui:define>
 </ui:composition>
