enable menu on click and disable hover effect on disabled menu

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -234,6 +234,10 @@ body.first-visit #portal-header {
     color: #1b2b36;
     }
 
+#header-nav li.disabled:hover > a {
+    color: #fff;
+}
+
 #header-nav li ul {
     position: fixed;
     list-style: none;
