Add desktop widgets for tasks, processes and projects

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -451,6 +451,11 @@ section#content-section {
     background: none;
 }
 
+#desktop-grid .ui-grid-row {
+    height: 30%;
+    overflow-y: scroll;
+}
+
 #desktopGrid_content > .ui-grid-row > .ui-panelgrid-cell {
     background-color: white !important;
     padding: 0;
