--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/tasksWidget.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/tasksWidget.xhtml
@@ -15,13 +15,15 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <p:importEnum type="org.kitodo.enums.ObjectType" var="objectTypeEnum"/>
-    <p:dataTable id="statisticsTable" value="#{DesktopForm.objectTypes}" var="objectType">
-        <p:column headerText="Art">
-            <h:outputText value="#{objectType.translation}"/>
+    <p:dataTable id="taskTable"
+                 value="#{DesktopForm.tasks}"
+                 var="task">
+        <p:column headerText="#{msgs.title}">
+            <h:outputText value="#{task.title}"/>
         </p:column>
-        <p:column headerText="Anzahl">
-            <h:outputText value="#{DesktopForm.getNumberOfElements(objectType)}"/>
+        <p:column headerText="#{msgs.process}">
+            <h:outputText value="#{task.process}"/>
         </p:column>
+        <p:column headerText="#{msgs.actions}" styleClass="actionsColumn"/>
     </p:dataTable>
 </ui:composition>
