--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -822,6 +822,58 @@ main i.fa {
     line-height: 22px;
 }
 
+.select-client-note {
+    background: #F94A15;
+    padding: 16px 32px 16px 32px;
+    color: #ffffff;
+    hyphens: auto;
+    line-height: 22px;
+}
+
+.client-select-dialog {
+    background: #f5f5f5;
+}
+
+.client-select-dialog > .ui-dialog-titlebar > .ui-dialog-title {
+    color: #000000;
+    font-size: 150%;
+    margin-top: 25px;
+    line-height: 150%;
+}
+
+.client-select-dialog > .ui-dialog-content {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.client-select-dialog > .ui-dialog-content > #select-session-client-form > .select-client-selector {
+    padding: 16px 32px 16px 32px;
+}
+
+#select-session-client-form > .select-client-selector > .ui-selectonemenu {
+    margin-top: 8px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+#select-session-client-form > .select-client-selector > .ui-panelgrid {
+    margin-top: 20px;
+    width: 100%;
+}
+
+#select-session-client-form > .select-client-selector > .ui-panelgrid > tbody > .ui-panelgrid-even {
+    background: transparent;
+}
+
+#select-session-client-form > .select-client-selector > .ui-panelgrid > tbody > .ui-panelgrid-even > .ui-panelgrid-cell {
+    padding: 0;
+}
+
+.client-select-dialog > .ui-widget-header {
+    padding-left: 32px;
+    background: transparent;
+}
+
 /*----------------------------------------------------------------------
 Footer
 ----------------------------------------------------------------------*/
