--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -15,6 +15,7 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:p="http://primefaces.org/ui">
     <div class="wrapper">
 
@@ -117,7 +118,7 @@
                                 </h3></li>
                                 <li>
                                     <div>
-                                        #{msgs.client}: <b>#{BenutzerverwaltungForm.currentSessionClientName}</b>
+                                        #{msgs.client}: <b>#{SessionClientController.currentSessionClientName}</b>
                                     </div>
                                 </li>
                                 <li><h:link value="#{msgs.userData}" outcome="userConfiguration"/></li>
@@ -145,6 +146,50 @@
                 </ul>
             </nav>
         </section>
-
+        <p:dialog header="#{msgs.welcome}, #{LoginForm.myBenutzer.name} #{LoginForm.myBenutzer.surname}"
+                  class="client-select-dialog"
+                  widgetVar="selectClientDialog"
+                  modal="true"
+                  width="500px"
+                  appendTo="@(body)"
+                  resizable="false"
+                  closable="false">
+            <h:form id="select-session-client-form">
+                <div class="select-client-note">#{msgs.selectClientNote}</div>
+                <div class="select-client-selector">
+                    <p>#{msgs.selectClient}</p>
+                    <p>
+                        <p:selectOneMenu id="client"
+                                     converter="#{clientConverter}"
+                                     value="#{SessionClientController.selectedClient}"
+                                     autoWidth="false">
+                            <f:selectItems value="#{ProjekteForm.clients}" var="client" itemValue="#{client}"
+                                           itemLabel="#{client.name}"/>
+                        </p:selectOneMenu>
+                    </p>
+                    <p:panelGrid>
+                        <p:row>
+                            <p:column>
+                                <p:button href="/logout"
+                                          id="dialogLogoutButton"
+                                          type="button"
+                                          value="#{msgs.cancel}"
+                                          icon="fa fa-close"
+                                          iconPos="right"/>
+                            </p:column>
+                            <p:column style="text-align: right">
+                                <p:commandButton id="setSessionClientButton"
+                                                 action="#{SessionClientController.setSelectedClientAsSessionClient}"
+                                                 oncomplete="PF('selectClientDialog').hide();"
+                                                 update="@all"
+                                                 value="#{msgs.select}"
+                                                 icon="fa fa-check"
+                                                 iconPos="right"/>
+                            </p:column>
+                        </p:row>
+                    </p:panelGrid>
+                </div>
+            </h:form>
+        </p:dialog>
     </div>
 </ui:composition>
