Update breadcrumb menus

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/tasksWidget.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/tasksWidget.xhtml
@@ -22,7 +22,7 @@
             <h:outputText value="#{task.title}"/>
         </p:column>
         <p:column headerText="#{msgs.process}">
-            <h:outputText value="#{task.process}"/>
+            <h:outputText value="#{task.process.title}"/>
         </p:column>
         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn"/>
     </p:dataTable>
