--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -17,7 +17,7 @@ body {
     margin: 0;
     border: 0 none;
     padding: 0;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Raleway', sans-serif !important;
     font-weight: 400;
     font-size: 16px;
     line-height: 18px;
@@ -435,6 +435,7 @@ main {
     z-index: 2;
     margin-bottom: 100px;
     padding: 0;
+    overflow-y: hidden;
     }
 
 body.first-visit main {
@@ -477,6 +478,10 @@ section#content-section {
 
 #desktopGrid_content thead {
     border-top: 3px solid #999;
+}
+
+.desktop-widget .ui-widget-content {
+    border-radius: 3px;
 }
 
 #listWrapper, section#content-section {
