--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/projectsWidget.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/projectsWidget.xhtml
@@ -13,6 +13,7 @@
 
 <ui:composition
         xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:p="http://primefaces.org/ui"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <p:dataTable id="projectTable"
@@ -24,6 +25,19 @@
         <p:column headerText="#{msgs.metsRightsOwner}">
             <h:outputText value="#{project.metsRightsOwner}"/>
         </p:column>
-        <p:column headerText="#{msgs.actions}" styleClass="actionsColumn"/>
+        <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
+            <h:form id="projectActionForm">
+                <h:link rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClientOrForProject('editProject',project.client.id, project.id)}"
+                        onclick="#{ProjekteForm.setLockedDetail(true)} #{ProjekteForm.setLockedMets(true)} #{ProjekteForm.setLockedTechnical(true)}" outcome="projectEdit"
+                        title="#{msgs.projectEdit}">
+                    <f:param name="id" value="#{project.id}" />
+                    <i class="fa fa-pencil-square-o fa-lg"/>
+                </h:link>
+                <h:commandLink rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('addProject', project.client.id)}"
+                               action="#{ProjekteForm.duplicateProject(project.id)}" immediate="true"
+                               title="#{msgs.duplicateProject}"><i class="fa fa-clone fa-lg"/></h:commandLink>
+                <h:link><i class="fa fa-bar-chart fa-lg"/></h:link>
+            </h:form>
+        </p:column>
     </p:dataTable>
 </ui:composition>
