--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -450,11 +450,26 @@ section#content-section {
 
 #desktopGrid, #desktopGrid_content {
     background: none;
+    height: inherit;
 }
 
-#desktop-grid .ui-grid-row {
-    height: 30%;
-    overflow-y: scroll;
+#desktopGrid_content {
+    display: flex;
+    flex-direction: column;
+}
+
+#desktopGrid .ui-grid-row {
+    flex-basis: 50%;
+    display: flex;
+    overflow-y: hidden;
+}
+
+#desktopGrid th.actionsColumn span, #desktopGrid td.actionsColumn form {
+    float: right;
+}
+
+#desktopGrid td.actionsColumn form a:last-of-type {
+    margin-right: 0;
 }
 
 #desktopGrid_content > .ui-grid-row > .ui-panelgrid-cell {
@@ -465,7 +480,7 @@ section#content-section {
     -webkit-box-shadow: 0px 3px 0px 0px rgba(0,0,0,0.2);
     -moz-box-shadow: 0px 3px 0px 0px rgba(0,0,0,0.2);
     box-shadow: 0px 3px 0px 0px rgba(0,0,0,0.2);
-    max-height: 40% !important;
+    min-height: 90%;
 }
 
 #desktopGrid_content > .ui-grid-row > .ui-panelgrid-cell .ui-widget-content {
@@ -476,7 +491,7 @@ section#content-section {
     height: unset !important;
 }
 
-#desktopGrid_content thead {
+#desktopGrid_content .ui-widget-header thead {
     border-top: 3px solid #999;
 }
 
