--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/processesWidget.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/processesWidget.xhtml
@@ -12,11 +12,13 @@
 -->
 
 <ui:composition
+        xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <p:dataTable id="processTable"
                  value="#{DesktopForm.processes}"
+                 scrollable="true"
                  var="process">
         <p:column headerText="#{msgs.title}">
             <h:outputText value="#{process.title}"/>
@@ -33,6 +35,37 @@
                             style="width:#{process.progressLocked * 0.8}px;height:10px"/>
             <h:graphicImage value="/pages/images/fortschritt/ende_rechts.gif" rendered="true" alt=""/>
         </p:column>
-        <p:column headerText="#{msgs.actions}" styleClass="actionsColumn"/>
+        <p:column headerText="#{msgs.project}">
+            <h:outputText value="#{DesktopForm.getProject(process).title}"/>
+        </p:column>
+        <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
+            <h:form id="actionForm">
+                <h:link id="editProcess"
+                        outcome="/pages/processEdit"
+                        title="#{msgs.processEdit}">
+                    <i class="fa fa-pencil-square-o fa-lg"/>
+                    <f:param name="id" value="#{process.id}"/>
+                </h:link>
+                <h:commandLink id="readXML" action="#{Metadaten.readXml}" title="#{msgs.metadataEdit}">
+                    <h:outputText><i class="fa fa-file-o"/></h:outputText>
+                    <f:param name="ProzesseID" value="#{process.id}"/>
+                    <f:param name="BenutzerID" value="#{LoginForm.myBenutzer.id}"/>
+                    <f:param name="zurueck" value="processList"/>
+                </h:commandLink>
+                <h:commandLink action="#{ProzessverwaltungForm.exportMets(process.id)}" id="exportMets" title="#{msgs.exportMets}">
+                    <h:outputText><i class="fa fa-file-code-o"/></h:outputText>
+                </h:commandLink>
+                <p:commandLink id="deleteProcess"
+                               action="#{ProzessverwaltungForm.delete}"
+                               title="#{msgs.delete}"
+                               update="processTable">
+                    <h:outputText><i class="fa fa-trash-o"/></h:outputText>
+                    <f:setPropertyActionListener value="#{process.id}" target="#{ProzessverwaltungForm.processByID}"/>
+                    <p:confirm header="#{msgs.confirmDelete}"
+                               message="#{msgs.confirmDeleteProcess}"
+                               icon="ui-icon-alert"/>
+                </p:commandLink>
+            </h:form>
+        </p:column>
     </p:dataTable>
 </ui:composition>
