--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/projectsWidget.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/projectsWidget.xhtml
@@ -18,6 +18,7 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <p:dataTable id="projectTable"
                  value="#{DesktopForm.projects}"
+                 scrollable="true"
                  var="project">
         <p:column headerText="#{msgs.title}">
             <h:outputText value="#{project.title}"/>
