--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/docketList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/docketList.xhtml
@@ -36,11 +36,23 @@
         <p:column headerText="#{msgs.actions}"
                   rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('docketEdit')}"
                   styleClass="actionsColumn">
-            <h:link outcome="/pages/docketEdit"
-                    title="#{msgs.editDocket}">
-                <f:param name="id" value="#{item.id}"/>
-                <i class="fa fa-pencil-square-o fa-lg"/>
-            </h:link>
+            <h:form id="actionForm">
+                <h:link outcome="/pages/docketEdit"
+                        title="#{msgs.editDocket}">
+                    <f:param name="id" value="#{item.id}"/>
+                    <i class="fa fa-pencil-square-o fa-lg"/>
+                </h:link>
+                <p:commandLink id="deleteDocket"
+                               action="#{DocketForm.deleteDocket}"
+                               title="#{msgs.delete}"
+                               update="projectsTabView:docketTable">
+                    <h:outputText><i class="fa fa-trash-o"/></h:outputText>
+                    <f:setPropertyActionListener value="#{item.id}" target="#{DocketForm.docketById}"/>
+                    <p:confirm header="#{msgs.confirmDelete}"
+                               message="#{msgs.confirmDeleteDocket}"
+                               icon="ui-icon-alert"/>
+                </p:commandLink>
+            </h:form>
         </p:column>
 
     </p:dataTable>
