--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/clientList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/clientList.xhtml
@@ -26,11 +26,23 @@
             <h:outputText value="#{item.name}"/>
         </p:column>
         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
-            <h:link outcome="clientEdit" title="#{msgs.clientEdit}"
-                    rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('viewClient',item.id)}">
-                <f:param name="id" value="#{item.id}"/>
-                <i class="fa fa-pencil-square-o fa-lg"/>
-            </h:link>
+            <h:form id="actionForm">
+                <h:link outcome="clientEdit" title="#{msgs.clientEdit}"
+                        rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('viewClient',item.id)}">
+                    <f:param name="id" value="#{item.id}"/>
+                    <i class="fa fa-pencil-square-o fa-lg"/>
+                </h:link>
+                <p:commandLink id="deleteClient"
+                               action="#{ClientForm.deleteClient}"
+                               title="#{msgs.delete}"
+                               update="usersTabView:clientsTable">
+                    <h:outputText><i class="fa fa-trash-o"/></h:outputText>
+                    <f:setPropertyActionListener value="#{item.id}" target="#{ClientForm.clientById}"/>
+                    <p:confirm header="#{msgs.confirmDelete}"
+                               message="#{msgs.confirmDeleteClient}"
+                               icon="ui-icon-alert"/>
+                </p:commandLink>
+            </h:form>
         </p:column>
     </p:dataTable>
 </ui:composition>
